# django-black-dashboard

./: .gitignore  package.json  pyproject.toml
.github/: README.md
