[tool.poetry]
name = "django-dashboard-black"
version = "1.0.4"
description = "Template project - Django Boilerplate Code"
authors = ["AppSeed App Generator <support@appseed.us> (https://appseed.us)"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.4.1"
dj-database-url = "0.5.0"
django = "3.2.11"
gunicorn = "20.1.0"
python-decouple = "3.5"
pytz = "2021.3"
sqlparse = "0.4.2"
toml = "0.10.2"
unipath = "1.1"
whitenoise = "5.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "1.6.0"
pycodestyle = "2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
