[tool.poetry]
name = "django-dashboard-black"
version = "1.0.4"
description = "Template project - Django Boilerplate Code"
authors = ["AppSeed App Generator <support@appseed.us> (https://appseed.us)"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "*"
dj-database-url = "*"
django = "*"
gunicorn = "*"
python-decouple = "*"
pytz = "*"
sqlparse = "*"
toml = "*"
unipath = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
